# Rainbow

./: .gitignore  LICENSE.md  pyproject.toml
rainbow/: agent.py  env.py  main.py  memory.py  model.py  test.py
