[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "rainbow"
description = ""
version = "0.1.0"
authors = ["Kai Arulkumaran", "Nathan Hunt <neighthan.hunt@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/neighthan/rainbow"

[tool.poetry.dependencies]
python = "^3.7"
atari-py = "^0.1.15"
opencv-python = "^4.1"
torch = "^1.1"
tqdm = {version = "^4.32", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^1.17"

